Fixes 498 - API detail: title layout size problem fixed - Table have some glitch in mobile view, they have text in overflow

--- a/swagger/components/CustomLayout.css
+++ b/swagger/components/CustomLayout.css
@@ -29,6 +29,21 @@
   }
 }
 
-tr > *.col{
-    width: auto;
+/* tr > *.col{
+    /* width: auto; */
+    /* width: 100%; */
+    /* display: block; */
+/* } */
+
+
+/* table tr {
+    display: -webkit-box;
+} */
+
+
+td {
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* white-space: nowrap; */
 }
